--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ disqus_shortname:
 # Extensions
 ## Plugins: https://github.com/tommy351/hexo/wiki/Plugins
 ## Themes: https://github.com/tommy351/hexo/wiki/Themes
-theme: landscape
+theme: garden # landscape
 exclude_generator:
 
 # Deployment
