--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "hexo-renderer-stylus": "*",
     "hexo-renderer-marked": "*",
     "hexo-renderer-less": "~0.1.0",
-    "express": "~4.4.3"
+    "express": "~4.4.3",
+    "hexo-generator-feed": "~0.1.1"
   }
 }
