--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ per_page: 10
 pagination_dir: page
 
 # Disqus
-disqus_shortname:
+disqus_shortname: timgthomas
 
 # Extensions
 ## Plugins: https://github.com/tommy351/hexo/wiki/Plugins
