upgrade hexo and move from heroku to github pages

--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,12 @@ disqus_shortname: timgthomas
 theme: tria-2015
 exclude_generator:
 
+plugins:
+- hexo-generator-cname
+
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:TimGThomas/timgthomas.com.git
+  branch: gh-pages
