--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "hexo-site",
   "version": "2.8.3",
   "private": true,
+  "hexo": {
+    "version": "3.1.1"
+  },
   "scripts": {
     "start": "hexo server",
-    "deploy": "sh deploy.sh"
+    "deploy": "hexo deploy"
   },
   "dependencies": {
-    "hexo-renderer-ejs": "*",
-    "hexo-renderer-stylus": "*",
-    "hexo-renderer-marked": "*",
-    "hexo-renderer-less": "~0.1.0",
     "express": "~4.4.3",
-    "hexo-generator-feed": "~0.1.1",
-    "hexo-livereload": "~0.1.0"
+    "hexo": "^3.1.1",
+    "hexo-deployer-git": "0.0.4",
+    "hexo-generator-archive": "^0.1.3",
+    "hexo-generator-cname": "^0.2.0",
+    "hexo-generator-feed": "^1.0.3",
+    "hexo-generator-index": "^0.1.3",
+    "hexo-livereload": "^0.1.0",
+    "hexo-renderer-ejs": "^0.1.0",
+    "hexo-renderer-marked": "^0.2.5",
+    "hexo-renderer-stylus": "^0.3.0",
+    "hexo-server": "^0.1.2"
   }
 }
