--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ highlight:
   enable: true
   line_number: false
   tab_replace:
+encoding: utf-8
 
 # Category & Tag
 default_category: uncategorized
