--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.3.3"
+  },
+  "devDependencies": {
+    "hexo-renderer-scss": "^1.2.0"
   }
 }
