--- a/_config.yml
+++ b/_config.yml
@@ -30,14 +30,14 @@ source_dir: source
 public_dir: public
 
 # Writing
-new_post_name: :year-:month-:day-:title.md # File name of new posts
+new_post_name: :year/:month-:day-:title.md # File name of new posts
 default_layout: post
 auto_spacing: false # Add spaces between asian characters and western characters
-titlecase: false # Transform title into titlecase
+titlecase: true # Transform title into titlecase
 external_link: true # Open external links in new tab
 max_open_file: 100
 multi_thread: true
-filename_case: 0
+filename_case: 1
 render_drafts: false
 post_asset_folder: true
 highlight:
