--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ public_dir: public
 new_post_name: :year/:month-:day-:title.md # File name of new posts
 default_layout: post
 auto_spacing: false # Add spaces between asian characters and western characters
-titlecase: true # Transform title into titlecase
+titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 max_open_file: 100
 multi_thread: true
