--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "hexo-site",
+  "name": "timgthomas.com",
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "3.9.0"
   },
   "scripts": {
     "start": "hexo server --debug",
     "deploy": "hexo deploy -g"
   },
-  "dependencies": {
-    "hexo": "^3.2.0",
+  "devDependencies": {
+    "hexo": "^3.9.0",
     "hexo-autoprefixer": "^2.0.0",
     "hexo-browsersync": "^0.3.0",
     "hexo-deployer-git": "1.0.0",
@@ -19,12 +19,10 @@
     "hexo-generator-feed": "^1.0.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-marked": "^0.3.2",
+    "hexo-renderer-handlebars": "^2.0.2",
+    "hexo-renderer-marked": "^1.0.1",
+    "hexo-renderer-scss": "^1.2.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.3.3"
-  },
-  "devDependencies": {
-    "hexo-renderer-handlebars": "^2.0.2",
-    "hexo-renderer-scss": "^1.2.0"
   }
 }
