--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "hexo": "^5.4.0",
     "hexo-autoprefixer": "^2.0.0",
     "hexo-browsersync": "^0.3.0",
-    "hexo-deployer-git": "1.0.0",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-cname": "^0.3.0",
     "hexo-generator-feed": "^3.0.0",
