--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "scripts": {
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "npm run check && astro build",
+    "check": "prettier --check --log-level=warn . '!src/content/**/*' && astro check",
     "preview": "astro preview"
   },
   "devDependencies": {
     "@astrojs/check": "^0.8.2",
     "astro": "^4.12.2",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.3"
   }
 }
