add masthead component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "timgthomas.com",
+  "displayName": "Tim G. Thomas",
   "version": "2024.0.0",
   "type": "module",
   "private": true,
