--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "*": "npm run check"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.8.2",
+    "@astrojs/check": "^0.9.3",
+    "@fontsource/alegreya-sans": "^5.0.14",
     "@fontsource/sometype-mono": "^5.0.3",
-    "astro": "^4.12.2",
+    "astro": "^4.14.5",
     "husky": "^9.1.1",
     "install": "^0.13.0",
     "lint-staged": "^15.2.7",
