--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	},
 	"dependencies": {
 		"globby": "^14.0.2",
-		"gray-matter": "^4.0.3"
+		"gray-matter": "^4.0.3",
+		"remark": "^15.0.1",
+		"remark-html": "^16.0.1"
 	}
 }
