--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"test": "npm run test:unit -- --run"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/node": "^22.10.1",
@@ -32,6 +31,7 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.5.2",
 		"globby": "^14.0.2",
 		"gray-matter": "^4.0.3",
 		"remark": "^15.0.1",
