--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vitest": "^2.0.4"
   },
   "dependencies": {
+    "@fontsource-variable/work-sans": "^5.1.0",
     "@fontsource/fira-sans": "^5.1.0",
     "@fontsource/fira-sans-condensed": "^5.1.0",
     "@modyfi/vite-plugin-yaml": "^1.1.0",
