--- a/src/content/talks/talks.yml
+++ b/src/content/talks/talks.yml
@@ -1,11 +1,11 @@
-- name: "Living Style Guides: Bringing Designers and Developers Together"
+- name: 'Living Style Guides: Bringing Designers and Developers Together'
   thumbnail: living-style-guides.jpg
   description: "Developers and designers rarely speak the same language. As wireframes turn into web apps, points become pixels, hues are coerced into hex values…it's no wonder a schism exists between these two essential disciplines! Fortunately, it doesn't have to be that way. In this session, we'll dive into the world of living style guides: the perfect pairing of design and code. We’ll explore how to architect your apps to make use of style guides, make design apps work for you and your design team, and reign in your varying component styles, all while providing your users a more consistent and refined experience!"
   conference: NDC Oslo 2020 (Online!)
   links:
     - type: slides
       link: https://speakerdeck.com/timgthomas/living-style-guides-bringing-designers-and-developers-together
-- name: "Icons and the Web: Symbols of the Modern Age"
+- name: 'Icons and the Web: Symbols of the Modern Age'
   thumbnail: icons-and-the-web.jpg
   description: Icons have been a staple of software for decades, and come in as many varieties as the tools used to make them. From humble beginnings as precisely-pixelated pictograms, icons are now entering a renaissance of high-density displays, vector formats, and an almost cult-like following. In this session, you'll learn the inner workings of modern icon design, explore various techniques for adding symbology to your web apps, and discover how to bring your interfaces into the modern age!
   conference: NDC London 2019
@@ -23,30 +23,30 @@
       link: https://www.youtube.com/watch?v=aZGf522Ykcg
     - type: slides
       link: https://speakerdeck.com/timgthomas/constructing-modern-uis-with-svg
-- name: "Browser Invasion: Desktop Apps and the Web"
+- name: 'Browser Invasion: Desktop Apps and the Web'
   thumbnail: browser-invasion.jpg
-  description: "The web’s biggest strength is that it’s universal: build a web site, and anyone with a browser and connection can access it. Desktop apps, however, have long been off-limits to web developers…but times change. Today, more and more apps are built with web technologies, and the benefits are many. In this session, you’ll learn how to use the tools and languages you already know to build rich, fully-featured desktop apps, and conquer a new galaxy of apps!"
+  description: 'The web’s biggest strength is that it’s universal: build a web site, and anyone with a browser and connection can access it. Desktop apps, however, have long been off-limits to web developers…but times change. Today, more and more apps are built with web technologies, and the benefits are many. In this session, you’ll learn how to use the tools and languages you already know to build rich, fully-featured desktop apps, and conquer a new galaxy of apps!'
   conference: NDC Minnesota 2018
   links:
     - type: video
       link: https://vimeo.com/271363801
     - type: slides
       link: https://speakerdeck.com/timgthomas/browser-invasion-desktop-apps-and-the-web
-- name: "Mind the Gap: Bringing Designers and Developers Together"
+- name: 'Mind the Gap: Bringing Designers and Developers Together'
   thumbnail: mind-the-gap.jpg
   description: Developers and designers rarely speak the same language. As wireframes turn into web pages, points become pixels, HSB colors are coerced into RGB hex values... It's no wonder a schism exists between these two essential disciplines, but it doesn't have to be that way. In this session, we'll cover a number of techniques to reduce context switching—and increase understanding—across the design/code boundary. You'll find it's not too tricky to take that first step into more efficient collaboration...provided you mind the gap!
   conference: Prairie Dev Con 2016
   links:
     - type: slides
       link: https://speakerdeck.com/timgthomas/mind-the-gap-bringing-designers-and-developers-together
-- name: "Zero to App Store: A Hybrid App’s Tale"
+- name: 'Zero to App Store: A Hybrid App’s Tale'
   thumbnail: zero-to-app-store.jpg
   description: "A lot goes into making a mobile app: from visual and interaction design to prototyping, then coding and testing, and finally the nerve-wracking submission process: it can seem overwhelming for an experienced team, much less a single developer. In this session, you'll get to cheer me on as I enthuse about my wild successes building a hybrid app, and have a good laugh at my expense while I discuss my abysmal failures. We'll also touch on some tooling and workflows that contribute to the longest journey of hybrid app development."
   conference: Prairie Dev Con 2016
   links:
     - type: slides
       link: https://speakerdeck.com/timgthomas/zero-to-app-store-a-hybrid-apps-tale
-- name: "Chocolate-Covered Vegetables: Tasty Workflows with Broccoli"
+- name: 'Chocolate-Covered Vegetables: Tasty Workflows with Broccoli'
   thumbnail: chocolate-covered-vegetables.jpg
   description: Arguably, one of the best trends in software is that building it requires less and less overhead. While once developers used punch cards to perform even the most basic of mathematical calculations, we can now make changes to live web sites in a browser and see the results instantly. In this session, you'll learn how to use Broccoli, a blazingly-fast new asset pipeline tool, to dramatically cut down the time it takes to build for the web. We'll also explore other tools and methods that work well with Broccoli, and build the web workflow you've always hungered for.
   conference: Dallas Tech Fest 2016
@@ -55,7 +55,7 @@
       link: https://speakerdeck.com/timgthomas/chocolate-covered-vegetables-tasty-workflows-with-broccoli-1
     - type: code
       link: https://github.com/TimGThomas/chocolate-covered-vegetables
-- name: "Form with Function: Adding Behavior with CSS"
+- name: 'Form with Function: Adding Behavior with CSS'
   description: "As the web becomes a more vivid, interactive medium, page payloads increase dramatically. Images, templates, and behavioral plugins add needed richness, but also code complexity and, yes, file size. Fortunately, there's an unusual way to add some great interactions to your web apps without bloating your pages: with CSS!"
   thumbnail: form-with-function.jpg
   conference: NDC Oslo 2015
