--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@astrojs/mdx": "^4.3.5",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.5.1",
+    "@jsdevtools/rehype-url-inspector": "^2.0.2",
     "astro": "^5.13.7",
     "astro-robots": "^2.3.1",
     "sharp": "^0.34.3"
